@@ -51,18 +51,19 @@ static void draw_line(void) {
 	}
 	ctx.line.dw = 4;
 	ctx.line.ddecliv = ctx.poly.decliveness;
-	ctx.line.count = c_stop - c_start;
-	if (ctx.line.count < 0) {
-		ctx.line.count = -ctx.line.count;
-		ctx.line.dw = -ctx.line.dw;
-		ctx.line.ddecliv = -ctx.line.ddecliv;
+	unsigned left_side = 0, right_side = 1;
+	if ( c_stop < c_start ) {
+		SWAP(int32_t, c_stop, c_start);
+		left_side = 1;
+		right_side = 0;
 	}
+	ctx.line.count = c_stop - c_start;
 	int32_t inv_dc = 0;
 	if (ctx.poly.nb_params > 0) {
 		if (ctx.line.count) inv_dc = Fix_inv(ctx.line.count<<16);
 		for (unsigned p=ctx.poly.nb_params; p--; ) {
-			ctx.line.param[p] = ctx.trap.side[0].param[p];	// starting value
-			ctx.line.dparam[p] = ((int64_t)(ctx.trap.side[1].param[p]-ctx.line.param[p])*inv_dc)>>16;
+			ctx.line.param[p] = ctx.trap.side[left_side].param[p];	// starting value
+			ctx.line.dparam[p] = ((int64_t)(ctx.trap.side[right_side].param[p]-ctx.line.param[p])*inv_dc)>>16;
 		}
 	}
 	ctx.line.decliv = ctx.poly.decliveness*c_start;	// 16.16
@@ -72,10 +73,12 @@ static void draw_line(void) {
 		ctx.line.w = (uint8_t *)&shared->buffers[ctx.location.out.address + ((c_start+ctx.view.winPos[1])<<ctx.location.out.width_log) + (ctx.poly.nc_declived>>16) + ctx.view.winPos[0]];
 		ctx.line.dw <<= ctx.location.out.width_log;
 	}
-	static draw_line_t const draw_lines[NB_RENDERING_TYPES] = {
-		draw_line_c, draw_line_ci, draw_line_uv, draw_line_uvi, draw_line_uvk, draw_line_shadow, draw_line_uvk_shadow
+	static draw_line_t const draw_lines[2][NB_RENDERING_TYPES] = {
+		{ draw_line_c, draw_line_ci, draw_line_uv, draw_line_uvi_lin, draw_line_uvk, draw_line_shadow, draw_line_uvk_shadow },	// no perspective
+		{ draw_line_c, draw_line_ci, draw_line_uv, draw_line_uvi, draw_line_uvk, draw_line_shadow, draw_line_uvk_shadow }	// perspective
 	};
-	perftime_enter(PERF_POLY_DRAW, "poly_draw");
+	unsigned previous_target = perftime_target();
+	perftime_enter(PERF_POLY_DRAW, "raster");
 #ifdef GP2X
 	{	// patch code
 		bool patched = false;
@@ -116,8 +119,8 @@ static void draw_line(void) {
 		}
 	}
 #endif
-	draw_lines[ctx.poly.cmdFacet.rendering_type]();
-	perftime_enter(PERF_POLY, NULL);
+	draw_lines[ctx.poly.cmdFacet.perspective][ctx.poly.cmdFacet.rendering_type]();
+	perftime_enter(previous_target, NULL);
 	if (start_poly) start_poly --;
 }
 
@@ -151,9 +154,9 @@ static void draw_trapeze(void) {
 		int32_t dnc = ctx.poly.nc_declived_next - ctx.poly.nc_declived;
 		dnc = Fix_abs(dnc);
 		// compute z_alpha_next
-		if (ctx.poly.nb_params > 0) {
+		if (ctx.poly.cmdFacet.perspective && ctx.poly.nb_params > 0) {
 			if (complete_scan_line) {
-				ctx.poly.z_den += (int64_t)ctx.poly.z_dden<<16;
+				ctx.poly.z_den += (int64_t)ctx.poly.z_dden<<16;	// wrong if !complete_scan_line
 				ctx.poly.z_num += (int64_t)ctx.poly.z_dnum<<16;
 			} else {
 				ctx.poly.z_den += (int64_t)dnc*ctx.poly.z_dden;
@@ -174,9 +177,15 @@ static void draw_trapeze(void) {
 		// next scanline (1 DIV)
 		ctx.poly.z_alpha = ctx.poly.z_alpha_next;
 		for (unsigned side=2; side--; ) {
-			int32_t dalpha = ctx.poly.z_alpha - ctx.trap.side[side].z_alpha_start;
-			for (unsigned p=ctx.poly.nb_params; p--; ) {
-				ctx.trap.side[side].param[p] = (((int64_t)ctx.trap.side[side].param_alpha[p]*dalpha)>>16) + ctx.poly.vectors[ ctx.trap.side[side].start_v ].cmdVector.geom.param[p];
+			if (ctx.poly.cmdFacet.perspective) {
+				int32_t dalpha = ctx.poly.z_alpha - ctx.trap.side[side].z_alpha_start;
+				for (unsigned p=ctx.poly.nb_params; p--; ) {
+					ctx.trap.side[side].param[p] = (((int64_t)ctx.trap.side[side].param_alpha[p]*dalpha)>>16) + ctx.poly.vectors[ ctx.trap.side[side].start_v ].cmdVector.geom.param[p];
+				}
+			} else {
+				for (unsigned p=ctx.poly.nb_params; p--; ) {
+					ctx.trap.side[side].param[p] += ctx.trap.side[side].param_alpha[p];	// wrong if !complete_scan_line
+				}
 			}
 			ctx.trap.side[side].c = ctx.trap.side[side].c_next;
 		}
@@ -200,7 +209,7 @@ void draw_poly(void) {
 	// bounding box
 	unsigned b_vec, c_vec;
 	c_vec = b_vec = ctx.poly.first_vector;
-	if (ctx.poly.nb_params > 0) {
+	if (ctx.poly.cmdFacet.perspective && ctx.poly.nb_params > 0) {
 		// compute decliveness (2 DIVs)
 		// FIXME: with clipping, A can get very close from B or C.
 		// we want b = zmin, c = zmax (closer)
@@ -240,7 +249,7 @@ void draw_poly(void) {
 		if (m[0]) ctx.poly.decliveness = (((int64_t)m[1])<<16)/m[0];
 	}
 	// compute all nc_declived
-	{
+	{	// TODO : include this in the previous if, else decliveness=0 so nc_declived = nc.
 		unsigned v = ctx.poly.first_vector;
 		do {
 			ctx.poly.vectors[v].nc_declived = ctx.poly.vectors[v].c2d[!ctx.poly.scan_dir] - (((int64_t)ctx.poly.decliveness*ctx.poly.vectors[v].c2d[ctx.poly.scan_dir])>>16);
@@ -252,7 +261,7 @@ void draw_poly(void) {
 		ctx.poly.z_num = 0;
 		ctx.poly.nc_dir = 1;
 		int32_t dz = ctx.poly.vectors[b_vec].cmdVector.geom.c3d[2] - ctx.poly.vectors[c_vec].cmdVector.geom.c3d[2];
-		if (0 == dz) {	// if dz is 0, b_vec and c_vec are random, and so would be dnc
+		if (0 == dz) {	// if dz is 0, b_vec and c_vec are random or not set yet, and so would be dnc
 			unsigned v = ctx.poly.first_vector;
 			do {
 				if (ctx.poly.vectors[v].nc_declived < ctx.poly.vectors[c_vec].nc_declived) {
@@ -268,16 +277,20 @@ void draw_poly(void) {
 			}
 		}
 		ctx.poly.nc_declived = ctx.poly.vectors[c_vec].nc_declived;
-		int32_t dnc = ctx.poly.vectors[b_vec].nc_declived - ctx.poly.vectors[c_vec].nc_declived;
-		ctx.poly.z_den = ((int64_t)ctx.poly.vectors[b_vec].cmdVector.geom.c3d[2]*dnc);
-		if (dnc < 0) {
+		int32_t dnc, dnc_ = ctx.poly.vectors[b_vec].nc_declived - ctx.poly.vectors[c_vec].nc_declived;
+		if (dnc_ > 0) {
+			dnc = dnc_;
+		} else {
+			dnc = -dnc_;
 			ctx.poly.nc_dir = -1;
-			dnc = -dnc;
 		}
-		ctx.poly.z_dnum = ctx.poly.nc_dir == 1 ? ctx.poly.vectors[c_vec].cmdVector.geom.c3d[2]:-ctx.poly.vectors[c_vec].cmdVector.geom.c3d[2];
-		ctx.poly.z_dden = ctx.poly.nc_dir == 1 ? -dz:dz;
+		if (ctx.poly.cmdFacet.perspective) {
+			ctx.poly.z_den = ((int64_t)ctx.poly.vectors[b_vec].cmdVector.geom.c3d[2]*dnc_);
+			ctx.poly.z_dnum = ctx.poly.nc_dir == 1 ? ctx.poly.vectors[c_vec].cmdVector.geom.c3d[2]:-ctx.poly.vectors[c_vec].cmdVector.geom.c3d[2];
+			ctx.poly.z_dden = ctx.poly.nc_dir == 1 ? -dz:dz;
+			ctx.poly.z_alpha = 0;
+		}
 		ctx.trap.side[0].start_v = ctx.trap.side[0].end_v = ctx.trap.side[1].start_v = ctx.trap.side[1].end_v = c_vec;
-		ctx.poly.z_alpha = 0;
 	}
 	// cut into trapezes
 #	define DNC_MIN 0x8000
@@ -303,15 +316,19 @@ void draw_poly(void) {
 				ctx.trap.side[side].dc = ((int64_t)num<<16)/dnc;
 				// compute alpha_params used for vector parameters
 				if (ctx.poly.nb_params > 0) {
-					// first, compute the z_alpha of end_v
-					int64_t n = ctx.poly.z_num + (((int64_t)ctx.poly.z_dnum*dnc));	// 32.32
-					int64_t d = ctx.poly.z_den + (((int64_t)ctx.poly.z_dden*dnc));	// 32.32
-					ctx.trap.side[side].z_alpha_start = ctx.poly.z_alpha;
-					ctx.trap.side[side].z_alpha_end = ctx.poly.z_alpha;
-					if (d) ctx.trap.side[side].z_alpha_end = n/(d>>16);
-					int32_t const dalpha = ctx.trap.side[side].z_alpha_end - ctx.trap.side[side].z_alpha_start;
 					int32_t inv_dalpha = 0;
-					if (dalpha) inv_dalpha = Fix_inv(dalpha);
+					if (ctx.poly.cmdFacet.perspective) {
+						// first, compute the z_alpha of end_v
+						int64_t n = ctx.poly.z_num + (((int64_t)ctx.poly.z_dnum*dnc));	// 32.32
+						int64_t d = ctx.poly.z_den + (((int64_t)ctx.poly.z_dden*dnc));	// 32.32
+						ctx.trap.side[side].z_alpha_start = ctx.poly.z_alpha;
+						ctx.trap.side[side].z_alpha_end = ctx.poly.z_alpha;
+						if (d) ctx.trap.side[side].z_alpha_end = n/(d>>16);
+						int32_t const dalpha = ctx.trap.side[side].z_alpha_end - ctx.trap.side[side].z_alpha_start;
+						if (dalpha) inv_dalpha = Fix_inv(dalpha);
+					} else {
+						inv_dalpha = Fix_inv(dnc);
+					}
 					for (unsigned p=ctx.poly.nb_params; p--; ) {
 						int32_t const P0 = ctx.poly.vectors[ ctx.trap.side[side].start_v ].cmdVector.geom.param[p];
 						int32_t const PN = ctx.poly.vectors[ ctx.trap.side[side].end_v ].cmdVector.geom.param[p];
