@@ -143,6 +143,7 @@ static void send_facet(unsigned v0) {
 		.opcode = gpuFACET,
 		.size = 4,
 		.rendering_type = rendering_uvi,
+		.perspective = 1,
 	};
 	static struct iovec cmdvec[4+1] = {
 		{ .iov_base = &facet, .iov_len = sizeof(facet) },
