@@ -1,3 +1,6 @@
+2006-10-07 rixed@free.fr
+	* Addition of a no-perspective move that's much faster on GP2X.
+
 2006-06-28 rixed@free.fr
 	* Addition of transpose-compose.
 	* More pictures and animations in codealone.
